Fixed scrollbars appearing even when window is large enough to hold everything

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,6 +15,7 @@ body, svg#graph
     border-radius: 0;
     border: none;
     border-bottom: 1px solid black;
+    margin-bottom: 0;
 }
 
 .navbar a.navbar-brand
